--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 version: '3'
 
 services:
-#  db:
-#    image: mysql
+  db:
+    image: mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=Saphira10
+      - MYSQL_DATABASE=django-tutorial
+      - MYSQL_USER=django
+      - MYSQL_PASSWORD=django
+    command: mysqld --default-authentication-plugin=mysql_native_password
   web:
     build: .
-#    command: python3 mysite/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
       - "8000:8000"
-    stdin_open: true
-#    depends_on:
-#      - db
+    depends_on:
+      - db
